--- a/.github/workflows/run-tests-matrix.yml
+++ b/.github/workflows/run-tests-matrix.yml
@@ -1,4 +1,4 @@
-name: Run all the tests for PRs
+name: Run all the tests for PRs, with OS/Python matrix
 
 on:
   [push, pull_request]
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ python-version }}
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run:
         python -m pip install pytest numpy
