Debugging the secret workflow

--- a/.github/workflows/reveal-secret.yml
+++ b/.github/workflows/reveal-secret.yml
@@ -1,4 +1,4 @@
-name: Reveal a secret when the repository is tagged as something starting by "secret"
+name: Reveal a secret when the repository is tagged as something starting by secret
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       env:
         SECRET_MSG: ${{ secrets.TOP_SECRET }}
       run:
-        echo "$TOP_SECRET"
-	if [ "$TOP_SECRET" = 'do not tell anyone' ]; then
-	   echo matches
-	fi
+        - echo "$TOP_SECRET"
+        - if [ "$TOP_SECRET" = 'do not tell anyone' ]; then
+            echo matches
+          fi
