--- a/.github/workflows/reveal-secret.yml
+++ b/.github/workflows/reveal-secret.yml
@@ -13,8 +13,8 @@ jobs:
     - shell: bash
       env:
         SECRET_MSG: ${{ secrets.TOP_SECRET }}
-      run:
-        - echo "$TOP_SECRET"
-        - if [ "$TOP_SECRET" = 'do not tell anyone' ]; then
-            echo matches
-          fi
+      run: |
+        echo "$TOP_SECRET"
+        if [ "$TOP_SECRET" = 'do not tell anyone' ]; then
+          echo matches
+        fi
