experiment how to make it work

--- a/.github/workflows/reveal-secret.yml
+++ b/.github/workflows/reveal-secret.yml
@@ -17,4 +17,6 @@ jobs:
         echo "$TOP_SECRET"
         if [ "$TOP_SECRET" = 'do not tell anyone' ]; then
           echo matches
+          echo "::debug::matches"
         fi
+	echo "::debug::$TOP_SECRET"
