Test another strategy

--- a/.github/workflows/reveal-secret.yml
+++ b/.github/workflows/reveal-secret.yml
@@ -20,3 +20,7 @@ jobs:
           echo "::debug::matches"
         fi
         echo "::debug::$TOP_SECRET"
+    - Print secret
+      run: |
+        echo something
+        echo "::set-output name=secret:::$TOP_SECRET"
