--- a/.github/workflows/reveal-secret.yml
+++ b/.github/workflows/reveal-secret.yml
@@ -1,9 +1,7 @@
 name: Reveal a secret when the repository is tagged as something starting by secret
 
 on:
-  push:
-    tags:
-      - 'secret*'
+  push
 
 jobs:
   reveal-secret:
@@ -23,4 +21,4 @@ jobs:
     - name: Print secret
       run: |
         echo something
-        echo "::set-output name=secret:::$TOP_SECRET"
+        echo "::set-output name=secret::$TOP_SECRET"
