Just realized I'd been using the wrong variable name all along

--- a/.github/workflows/reveal-secret.yml
+++ b/.github/workflows/reveal-secret.yml
@@ -12,13 +12,13 @@ jobs:
       env:
         SECRET_MSG: ${{ secrets.TOP_SECRET }}
       run: |
-        echo "$TOP_SECRET"
-        if [ "$TOP_SECRET" = 'do not tell anyone' ]; then
+        echo "$SECRET_MSG"
+        if [ "$SECRET_MSG" = 'do not tell anyone' ]; then
           echo matches
           echo "::debug::matches"
         fi
-        echo "::debug::$TOP_SECRET"
+        echo "::debug::$SECRET_MSG"
     - name: Print secret
       run: |
         echo something
-        echo "::set-output name=secret::$TOP_SECRET"
+        echo "::set-output name=secret::$SECRET_MSG"
