--- a/.github/workflows/reveal-secret.yml
+++ b/.github/workflows/reveal-secret.yml
@@ -12,13 +12,7 @@ jobs:
       env:
         SECRET_MSG: ${{ secrets.TOP_SECRET }}
       run: |
-        echo "$SECRET_MSG"
+        echo The secret is "$SECRET_MSG"
         if [ "$SECRET_MSG" = 'do not tell anyone' ]; then
           echo matches
-          echo "::debug::matches"
         fi
-        echo "::debug::$SECRET_MSG"
-    - name: Print secret
-      run: |
-        echo something
-        echo "::set-output name=secret::$SECRET_MSG"
