A push should not trigger the secret workflow

--- a/.github/workflows/reveal-secret.yml
+++ b/.github/workflows/reveal-secret.yml
@@ -1,7 +1,9 @@
 name: Reveal a secret when the repository is tagged as something starting by secret
 
 on:
-  push
+  push:
+    tags:
+      - 'secret*'
 
 jobs:
   reveal-secret:
